--- a/package.json
+++ b/package.json
@@ -5,29 +5,30 @@
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
+    "build:gh-pages": "GITHUB_PAGES=1 next build",
     "start": "next start",
     "lint": "next lint",
     "format": "prettier . --write",
     "format:check": "prettier . --check"
   },
   "dependencies": {
-    "@tanstack/react-query": "^5.90.12",
-    "i18next": "^25.7.3",
-    "next": "^16.1.1",
-    "react": "^19.2.3",
-    "react-dom": "^19.2.3",
-    "react-i18next": "^16.5.0",
+    "@tanstack/react-query": "^5.90.20",
+    "i18next": "^25.8.1",
+    "next": "^16.1.6",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
+    "react-i18next": "^16.5.4",
     "react-loading-skeleton": "^3.5.0",
-    "styled-components": "^6.1.19"
+    "styled-components": "^6.3.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@types/node": "^22.13.11",
+    "@types/node": "^25.2.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.2.1",
-    "prettier": "^3.5.3",
-    "typescript": "^5.8.2"
+    "eslint-config-next": "16.1.6",
+    "prettier": "^3.8.1",
+    "typescript": "^5.9.3"
   }
 }
