--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -68,6 +68,8 @@ jobs:
       - name: Install dependencies
         run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
       - name: Build with Next.js
+        env:
+          GITHUB_PAGES_BASE_PATH: /${{ github.event.repository.name }}
         run: ${{ steps.detect-package-manager.outputs.manager }} run build:gh-pages
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
